force-app/main/default/objects/FileTemplate__c/FileTemplate__c.object-meta.xml
<CustomObject>
    <label>File Template</label>
    <nameField>
        <displayFormat>FT-{00000000}</displayFormat>
        <label>Nome File Template</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>