force-app/main/default/objects/FileTemplate__c/fields/FileDelimiter__c.field-meta.xml
<CustomField>
    <fullName>FileDelimiter__c</fullName>
    <description>Delimiter for the csv file.</description>
    <inlineHelpText>Typically &apos;,&apos; or &apos;;&apos;</inlineHelpText>
    <label>File Delimiter</label>
    <length>1</length>
    <type>Text</type>
</CustomField>