force-app/main/default/objects/FileTemplate__c/fields/FileExtension__c.field-meta.xml
<CustomField>
    <fullName>FileExtension__c</fullName>
    <label>File Extension</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>.csv</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>