force-app/main/default/objects/FileTemplate__c/fields/FileTemplateName__c.field-meta.xml
<CustomField>
    <fullName>FileTemplateName__c</fullName>
    <label>File Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>