force-app/main/default/objects/FileTemplate__c/fields/FileType__c.field-meta.xml
<CustomField>
    <fullName>FileType__c</fullName>
    <label>File Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>