force-app/main/default/objects/FileTemplate__c/fields/HeadLineIndex__c.field-meta.xml
<CustomField>
    <fullName>HeadLineIndex__c</fullName>
    <description>L&apos;indice (a partire da 0) al quale trovare la riga di Header del file</description>
    <label>Head Line Index</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>